# Smoothy-Client

./: .gitignore  Cargo.toml  LICENSE  README.md  start.sh
config/: client_config.json
logs/: log.txt
src/: config.rs  input.rs  log.rs  main.rs  process.rs  smoothy.rs
