[package]
name = "smoothy-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rusty_time = "0.12.0"
serde = {version = "1.0.159", features = ["derive"]}
serde_json = "1.0.95"
sysinfo = "0.28.4"
# logio = {path = "crates/logio"}
# logio = {path = "../logio"}
logio = "0.1.0"
